# space-weather-forecast-sdn-plugin

./: .gitignore  README.md  example.js  package.json  plugin-manifest.json  setup.sh
src/: index.ts
src/cpp/: CMakeLists.txt  wasm_api.cpp
src/cpp/include/swpc/: forecast_parser.h
src/cpp/src/: forecast_parser.cpp
src/cpp/tests/: test_roundtrip.cpp
wasm/: CMakeLists.txt  build.sh  package.json
wasm/node/: index.js  index.mjs  swpc_forecast.js  swpc_forecast.wasm
wasm/src/: parse.cpp  parse.hpp  swf_parser.cpp
